// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate should add markdown 1`] = `
"
    window.configuration = {
      searchIndex: [],
      markdown: [],
      plugins: [],
      setFirstLink() {
        console.log('Called setFirstLink before it was configured');
      },
      setSearchIndex() {
        console.log('Called setSearchIndex before it was configured');
      }
    };

    import React from 'react';
    import path from 'path';

    const e = React.createElement;

    function lazyLoad(CompProvider) {
      return class extends React.Component {
        constructor(props) {
          super(props);
          this.state = {
            Comp: null
          }
        }

        componentDidMount() {
          if (!this.state.Comp) {
            CompProvider().then(c => {
              this.setState({
                Comp: c.default
              });
            });
          }
        }

        render() {
          const { Comp } = this.state;
          return Comp ? React.createElement(Comp, this.props, null) : null;
        }
      }
    }

    const INDEX_PAGE = 'index.md';

    function trim(s, c) {
      if (c === \\"]\\") c = \\"\\\\\\\\]\\";
      if (c === \\"\\\\\\\\\\") c = \\"\\\\\\\\\\\\\\\\\\";
      return s.replace(new RegExp(
        \\"^[\\" + c + \\"]+|[\\" + c + \\"]+$\\", \\"g\\"
      ), \\"\\");
    }

    function isIndex(p) {
      return p.includes(INDEX_PAGE) && 
        (!process.env.navItems || 
          Object.values(process.env.navItems)
            .map(item => {
              return item === '/' ? INDEX_PAGE : path.join(trim(item, '/'), INDEX_PAGE);
            })
            .includes(p)
          );
    }

    function registerMarkdown(markdownPath, provider) {
      const comp = lazyLoad(provider);

      if(isIndex(markdownPath)) {
        window.configuration.markdown.push([path.join('/', markdownPath), comp, true, null]);
      } else {
        window.configuration.markdown.push([path.join('/', markdownPath), comp]);
      }
    }

    function registerPlugin(name, provider, options) {
      const comp = lazyLoad(provider);

      window.configuration.plugins.push([
        name,
        lazyLoad(provider),
        options
      ]);
    }
  
    import('/folder/search').then((files) => {
      window.configuration.setSearchIndex(files.default);
    })
  
        registerMarkdown(
          '../path/to/markdown.md',
          () => import('path/to/markdown.md')
        );
      

        registerMarkdown(
          '../path/to/another-markdown.md',
          () => import('path/to/another-markdown.md')
        );
      "
`;

exports[`generate should add plugins 1`] = `
"
    window.configuration = {
      searchIndex: [],
      markdown: [],
      plugins: [],
      setFirstLink() {
        console.log('Called setFirstLink before it was configured');
      },
      setSearchIndex() {
        console.log('Called setSearchIndex before it was configured');
      }
    };

    import React from 'react';
    import path from 'path';

    const e = React.createElement;

    function lazyLoad(CompProvider) {
      return class extends React.Component {
        constructor(props) {
          super(props);
          this.state = {
            Comp: null
          }
        }

        componentDidMount() {
          if (!this.state.Comp) {
            CompProvider().then(c => {
              this.setState({
                Comp: c.default
              });
            });
          }
        }

        render() {
          const { Comp } = this.state;
          return Comp ? React.createElement(Comp, this.props, null) : null;
        }
      }
    }

    const INDEX_PAGE = 'index.md';

    function trim(s, c) {
      if (c === \\"]\\") c = \\"\\\\\\\\]\\";
      if (c === \\"\\\\\\\\\\") c = \\"\\\\\\\\\\\\\\\\\\";
      return s.replace(new RegExp(
        \\"^[\\" + c + \\"]+|[\\" + c + \\"]+$\\", \\"g\\"
      ), \\"\\");
    }

    function isIndex(p) {
      return p.includes(INDEX_PAGE) && 
        (!process.env.navItems || 
          Object.values(process.env.navItems)
            .map(item => {
              return item === '/' ? INDEX_PAGE : path.join(trim(item, '/'), INDEX_PAGE);
            })
            .includes(p)
          );
    }

    function registerMarkdown(markdownPath, provider) {
      const comp = lazyLoad(provider);

      if(isIndex(markdownPath)) {
        window.configuration.markdown.push([path.join('/', markdownPath), comp, true, null]);
      } else {
        window.configuration.markdown.push([path.join('/', markdownPath), comp]);
      }
    }

    function registerPlugin(name, provider, options) {
      const comp = lazyLoad(provider);

      window.configuration.plugins.push([
        name,
        lazyLoad(provider),
        options
      ]);
    }
  
    import('/folder/search').then((files) => {
      window.configuration.setSearchIndex(files.default);
    })
  
        var options = {}

        
          registerPlugin(
            'first',
            () => import('path/to/plugin.js'),
            options
          );
        

        
      

        var options = { 'options': '1337' };

        
          registerPlugin(
            'second',
            () => import('path/to/another-plugin.js'),
            options
          );
        

        
      

        var options = {}

        
          registerPlugin(
            'npm',
            () => import('npm-package'),
            options
          );
        

        
      

        var options = {}

        

        
            registerPlugin(
              'es6',
              () => import('modules').then((res) => ({
                default: res['es6']
              })),
              options
            );
          
      

        var options = {}

        
          registerPlugin(
            'Default',
            () => import('another-package'),
            options
          );
        

        
            registerPlugin(
              'AnExport',
              () => import('another-package').then((res) => ({
                default: res['AnExport']
              })),
              options
            );
          

            registerPlugin(
              'AnotherExport',
              () => import('another-package').then((res) => ({
                default: res['AnotherExport']
              })),
              options
            );
          
      "
`;

exports[`stringify 1`] = `
"var options = {
    'number': '1',
    'string': 'string',
    'bool': 'true',
    'array': [() => 'string'],
    'functions': {
        'first': () => {
            return 1;
        }
    }
};"
`;
